new stting level

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -62,4 +62,7 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
 
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/GitTestLevel.GitTestLevel
+GameDefaultMap=/Game/GitTestLevel.GitTestLevel
 
